docs(hip): replace CRD YAML examples with semantic contracts
Signed-off-by: Lenin Mehedy <lenin.mehedy@hashgraph.com>